--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link
       rel="icon"
       type="image/svg+xml"
-      href="./src/assets/img/logo- turbo fundo branco.png"
+      href="./src/assets/cropped-logo-turbo-fundo-branco-BB.png"
       
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
